<resources>
    <string name="app_name">MusicPlayer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="song_name">i_move_on_sintel_song</string>
    <string name="play_start">Play</string>
    <string name="play_pause">Pause</string>
    <string name="play_replay">RePlay</string>
    <string name="play_stop">Stop</string>
    <string name="play_continue">Continue</string>
</resources>
