<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/play_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    <EditText
        android:id="@+id/play_song_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_name"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/play_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_start"/>
        <Button
            android:id="@+id/play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_pause"/>
        <Button
            android:id="@+id/play_replay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_replay"/>
        <Button
            android:id="@+id/play_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_stop"/>
    </LinearLayout>

    <SeekBar
        android:id="@+id/seek_probressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"/>
</LinearLayout>
